--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,10 +1,12 @@
-<!doctype html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <title>ToDoApp</title>
- </head>
- <body >
-     <h1>Hello</h1>
- </body>
- </html>  
+ <hr>
+<div class="form">
+  <div class="input-group">
+    <input type="text" class="form-control">
+    <span class="input-group-btn">
+      <button class="btn btn-default" type="button">
+        <span class="glyphicon glyphicon-plus"></span> Add Task</button>
+    </span>
+  </div>
+</div>
+
+    </hr>
