--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,27 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>TASKS</title>
-</head>
+
 <body ng-app="app">
-    <h1>Hello</h1>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">ToDoApp</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Login</a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#">Tasks</a></li>
+     
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+  <h3>Basic Navbar Example</h3>
+  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+</div>
+
+
+    
     <script src="bundle.js"></script>
 </body>
 </html> 
