--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -1,12 +1,2 @@
- <hr>
-<div class="form">
-  <div class="input-group">
-    <input type="text" class="form-control">
-    <span class="input-group-btn">
-      <button class="btn btn-default" type="button">
-        <span class="glyphicon glyphicon-plus"></span> Add Task</button>
-    </span>
-  </div>
-</div>
-
-    </hr>
+<h1>{{home.name}}</h1>
+<button ng-click="home.changeName()">Change Name</button> 
