--- a/app/index.html
+++ b/app/index.html
@@ -1,27 +1,29 @@
-
 <body ng-app="app">
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">ToDoApp</a>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">ToDoApp</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Login</a></li>
+        <li>
+          <a href="#"></a>
+        </li>
+        <li><a href="#">Tasks</a></li>
+
+      </ul>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Login</a></li>
-      <li><a href="#"></a></li>
-      <li><a href="#">Tasks</a></li>
-     
-    </ul>
+  </nav>
+
+  <div class="container">
+    <h3>Basic Navbar Example</h3>
+    <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
   </div>
-</nav>
-
-<div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-</div>
 
 
-    
-    <script src="bundle.js"></script>
+
+  <script src="bundle.js"></script>
 </body>
-</html> 
+
+</html>
