--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Document</title>
+   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
 
 <body ng-app="app">
@@ -23,7 +25,7 @@
   <div class="container">
     <h3>Basic Navbar Example</h3>
     <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-     <ui-view></ui-view>
+    <ui-view></ui-view>
   </div>
 
 
