Get all data from Firebase

--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -25,12 +25,9 @@
 <!--  </div>-->
 <!--</div>-->
 <hr/>
-
-
 <ul class="list-group">
   <li class="list-group-item clearfix task">
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p class="lead">{{home.todos}}</p>
     <div>
       <span class="pull-right">
         <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-pencil"></span></button>
@@ -41,6 +38,60 @@
     </div>
   </li>
 </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<ul id="todo-group" ng-show="title.length > 0">-->
+				<!--<li class="list-group-item clearfix task" ng-repeat="home in tasks" ng-class="{disabled: home.done}"> -->
+<!--				 <li ng-repeat="task in tasks | filter:statusFilter track by $index">-->
+					<!--<p class="lead">{{home.GetTask()}}</p>-->
+<!--					<p class="lead">Dupa</p>-->
+<!--					<div>-->
+<!--						<span class="pull-right">-->
+<!--							<button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-pencil" -->
+<!--								ng-click="editTask($index)"></span></button>-->
+<!--							<button class="btn btn-primary btn-xs" ng-show="!todo.done"><span class="glyphicon glyphicon-ok" -->
+<!--								ng-click="doneTask($index)"></span></button>-->
+<!--							<button class="btn btn-primary btn-xs" ng-show="todo.done"><span class="glyphicon glyphicon-repeat" -->
+<!--								ng-click="unDoneTask($index)"></span></button>-->
+<!--							<button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove" -->
+<!--								ng-click="deleteTask($index)"></span></button>-->
+<!--						</span>-->
+<!--					</div>-->
+<!--				</li>-->
+<!--			</ul>-->
+
+
+
+<!--<ul id="todo-group">-->
+<!--  <li ng-repeat="tod in todos | filter:statusFilter track by $index">-->
+<!--    <p class="lead">TRESC STRONY </p>-->
+<!--    <div>-->
+<!--      <span class="pull-right">-->
+<!--        <button class="btn btn-default btn-xs"><span class="glyphicon glyphicon-pencil"></span></button>-->
+<!--        <button class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-ok"></span></button>-->
+<!--        <button class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-repeat"></span></button>-->
+<!--        <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span></button>-->
+<!--      </span>-->
+<!--    </div>-->
+<!--  </li>-->
+<!--</ul>-->
 
 
 
