--- a/app/index.html
+++ b/app/index.html
@@ -9,23 +9,22 @@
 
 <body ng-app="app">
 
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">ToDoApp</a>
-      </div>
-      <ul class="nav navbar-nav">
+  <!--<nav class="navbar navbar-inverse">-->
+  <!--  <div class="container-fluid">-->
+  <!--    <div class="navbar-header">-->
+  <!--      <a class="navbar-brand" href="#">ToDoApp</a>-->
+  <!--    </div>-->
+  <!--    <ul class="nav navbar-nav">-->
         <!--<li class="active"><a href="#">Tasks</a></li>-->
-        <li><a ui-sref="home">Home</a></li>
-        <li><a href="#">Login</a></li>
-      </ul>
-    </div>
-  </nav>
+  <!--      <li><a ui-sref="home">Home</a></li>-->
+  <!--      <li><a href="#">Login</a></li>-->
+  <!--    </ul>-->
+  <!--  </div>-->
+  <!--</nav>-->
 
   <div class="container">
-    <h3>Basic Navbar Example</h3>
-    <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-    <ui-view></ui-view>
+   <center><h1>ToDo App</h1></center> 
+    <center> <ui-view></ui-view> </center>
   </div>
 
 
