--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -2,60 +2,55 @@
 <!--<button ng-click="home.changeName()">Change Name</button> -->
 
 
-  <div>
-    <p>{{home.status}}</p>
-  </div>
+<div>
+  <p>{{home.status}}</p>
+</div>
 
-  <form ng-submit="home.login()">
-    <div class="input-group input-group-lg">
-      <span class="input-group-addon" id="sizing-addon1">@</span>
-      <input ng-model="home.email" type="text" class="form-control" placeholder="Email address" aria-describedby="sizing-addon1">
-    </div>
-  </form>
-
-  <button ng-click="home.logout()">
+<button type="submit" class="btn btn-default" ng-click="home.logout()">
   Logout
 </button>
+<hr/>
+
+
+<form ng-submit="home.login()">
+  <div class="input-group input-group-lg">
+    <span class="input-group-addon" id="sizing-addon1">@</span>
+    <input ng-model="home.email" type="text" class="form-control" placeholder="Email address" aria-describedby="sizing-addon1">
+  </div>
+</form>
+<hr/>
 
 <!--<div class="form">-->
 <!--<div class="input-group">-->
-<form id="todo-form" ng-submit="home.AddTask()">
-  <input id="new-todo" type="text" class="form-control" ng-model="home.title">
-  <span class="input-group-btn">
+<div class="form">
+  <div class="input-group">
+    <input id="new-todo" type="text" class="form-control" ng-model="home.title">
+    <span class="input-group-btn">
 						<button class="btn btn-default" type="button" ng-click="home.AddTask()"><span
 							class="glyphicon glyphicon-plus"></span> Add Task</button>
-  </span>
-</form>
-<!--</span>-->
-
-<!--  </div>-->
-<!--</div>-->
+    </span>
+  </div>
+  <!-- /input-group -->
+</div>
+<hr/>
 </hr>
 
 <ul id="filters">
-  <li>
-    <a ng-class="home.applyFilter('all')" href="#/all">All</a>
-  </li>
-  <li>
-    <a ng-click="home.applyFilter('completed')" href="#/completed">Completed</a>
-  </li>
-  <li>
-    <a ng-click="home.applyFilter('uncompleted')" href="#/uncompleted">Uncompleted</a>
-  </li>
-  <li>
-    <a ng-click="home.applyFilter('mine')" href="#/mine">Mine</a>
-  </li>
+    <a href="#/all" class="btn btn-primary btn-lg active" role="button">All</a>
+    <a href="#/completed" class="btn btn-primary btn-lg active" role="button">Completed</a>
+    <a href="#/uncompleted" class="btn btn-primary btn-lg active" role="button">Uncompleted</a>
+    <a href="#/mine" class="btn btn-primary btn-lg active" role="button">Mine</a>
 </ul>
 <hr/>
 
 
 <!--Dzialajace-->
 <ul class="list-group">
-  <li ng-repeat="tod in home.todos| filter: home.statusFilter">
+  <li class="list-group-item clearfix task" ng-repeat="tod in home.todos| filter: home.statusFilter" ng-class="{disabled: tod.completed}">
     <p class="lead">{{tod.title }} {{tod.email}} {{tod.completed}}</p>
     <div>
       <span class="pull-right">
-      <button class="btn btn-primary btn-xs" ng-show="!tod.completed"><span class="glyphicon glyphicon-ok" 
+      <button class="btn btn-primary btn-xs" ng-show="!tod.completed && tod.email === home.email"><span class="glyphicon glyphicon-ok" 
 								ng-click="home.finishTask(tod)"></span></button>
       <button class="btn btn-danger btn-xs" ng-show="tod.email === home.email" ng-click="home.removeTask(tod)">
         <span class="glyphicon glyphicon-remove"></span></button>
