--- a/app/features/home/home.html
+++ b/app/features/home/home.html
@@ -6,55 +6,32 @@
   <p>{{home.status}}</p>
 </div>
 
-<button type="submit" class="btn btn-default" ng-click="home.logout()">
-  Logout
-</button>
-<hr/>
-
-
-<form ng-submit="home.login()">
-  <div class="input-group input-group-lg">
-    <span class="input-group-addon" id="sizing-addon1">@</span>
-    <input ng-model="home.email" type="text" class="form-control" placeholder="Email address" aria-describedby="sizing-addon1">
-  </div>
-</form>
-<hr/>
-
-<!--<div class="form">-->
-<!--<div class="input-group">-->
-<div class="form">
-  <div class="input-group">
-    <input id="new-todo" type="text" class="form-control" ng-model="home.title">
-    <span class="input-group-btn">
-						<button class="btn btn-default" type="button" ng-click="home.AddTask()"><span
-							class="glyphicon glyphicon-plus"></span> Add Task</button>
-    </span>
-  </div>
-  <!-- /input-group -->
-</div>
-<hr/>
-</hr>
-
-<ul id="filters">
-    <a href="#/all" class="btn btn-primary btn-lg active" role="button">All</a>
-    <a href="#/completed" class="btn btn-primary btn-lg active" role="button">Completed</a>
-    <a href="#/uncompleted" class="btn btn-primary btn-lg active" role="button">Uncompleted</a>
-    <a href="#/mine" class="btn btn-primary btn-lg active" role="button">Mine</a>
-</ul>
-<hr/>
-
-
-<!--Dzialajace-->
-<ul class="list-group">
-  <li class="list-group-item clearfix task" ng-repeat="tod in home.todos| filter: home.statusFilter" ng-class="{disabled: tod.completed}">
-    <p class="lead">{{tod.title }} {{tod.email}} {{tod.completed}}</p>
-    <div>
-      <span class="pull-right">
-      <button class="btn btn-primary btn-xs" ng-show="!tod.completed && tod.email === home.email"><span class="glyphicon glyphicon-ok" 
-								ng-click="home.finishTask(tod)"></span></button>
-      <button class="btn btn-danger btn-xs" ng-show="tod.email === home.email" ng-click="home.removeTask(tod)">
-        <span class="glyphicon glyphicon-remove"></span></button>
-      </span>
+<section id="todoapp">
+    <div class="col-md-3">
+       <div class="split">
+            <home-login></home-login>
+        </div>
+        <br>
+        <div class="split">
+            <home-logout></home-logout>
+        </div>
+   
+      
     </div>
-  </li>
-</ul>
+    <div class="col-md-6">
+        <div class="split">
+            <header id="header">
+                <home-form></home-form>
+            </header>
+            <br>
+            <section id="main" ng-cloak>
+                <home-tasks></home-tasks>
+            </section>
+        </div>
+    </div>
+    <div class="col-md-3" ng-cloak>
+        <div class="split">
+            <home-filter></home-filter>
+        </div>
+    </div>
+</section>
